@@ -33,7 +33,7 @@
     any other GPL-like (LGPL, GPL2) License.
 
         This version of RADIUS.php has been modified by
-        Jonathan De Graeve <jonathan@imelda.be> to integrate with M0n0wall <http://www.m0n0.ch/wall>
+        Jonathan De Graeve <m0n0wall@esstec.be> to integrate with M0n0wall <http://www.m0n0.ch/wall>
 
         Changes made include:
         * StandardAttributes for M0n0wall use
